--- a/play_rummy/templates/lobby.html
+++ b/play_rummy/templates/lobby.html
@@ -29,7 +29,7 @@
         button {
             appearance: none;
             border: none;
-            background-color:aliceblue;
+            background-color: aliceblue;
             border-radius: .125rem;
             padding: .25rem 1rem;
             margin: .125rem;
@@ -39,7 +39,7 @@
 
         button.button-action {
             background-color: lightseagreen;
-            color:azure;
+            color: azure;
         }
 
         span.badge {
@@ -48,15 +48,104 @@
             border-radius: .25rem;
             padding: .125rem .5rem;
             cursor: default;
-            font-weight: bold;
         }
 
         span.badge.badge-player {
-            background-color:plum;
+            background-color: gainsboro;
+        }
+
+        span.badge.badge-player.badge-player-ready {
+            background-color: forestgreen;
+            color: white;
         }
 
         div.flex {
             display: flex;
+            flex-wrap: wrap;
+        }
+
+        svg.icon-suit,
+        svg.icon-rank {
+            fill: currentColor;
+            stroke: currentColor;
+            stroke-linecap: round;
+            stroke-linejoin: round;
+        }
+
+
+        svg.icon-rotated {
+            transform: rotate(180deg);
+        }
+
+        svg.icon-suit.icon-suit-diamonds,
+        svg.icon-suit.icon-suit-hearts {
+            color: #c83737;
+        }
+
+        svg.icon-suit.icon-suit-clubs,
+        svg.icon-suit.icon-suit-spades {
+            color: #0b1728;
+        }
+
+        svg.icon-rank {
+            color: #003380;
+        }
+
+        div.card {
+            position: relative;
+            min-width: 5rem;
+            height: 6rem;
+            background-color: aliceblue;
+            border-radius: .5rem;
+            border: 1px solid #0002;
+            margin: .5rem
+        }
+
+        div.card svg.icon-suit,
+        div.card svg.icon-rank {
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+
+        div.card.card-selected {
+            border-width: 4px;
+            border-color: cadetblue;
+            margin: calc(.5rem - 3px);
+            box-shadow: 0 0 .25rem cadetblue;
+        }
+
+        div.deck div.card:not(:first-child) {
+            margin-left: -3rem;
+        }
+
+        div.game-status {
+            align-items: center;
+        }
+
+        .ms-auto {
+            margin-left: auto;
+        }
+
+        .ms-frem {
+            margin-left: 1rem;
+        }
+
+        .ms-hrem {
+            margin-left: .5rem;
+        }
+
+        #card-icons {
+            display: none;
+        }
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-weight: normal;
         }
     </style>
 </head>
@@ -80,6 +169,19 @@
         </form>
     </div>
     {% endif %}
+    <div class="deck flex">
+        {% for suit, rank in cards %}
+        {% set suit = "suit-" + suit %}
+        {% set rank = "rank-" + rank %}
+        <div class="card {{ suit }} {{ rank }}">
+            {{ svg_icon(suit, "icon-suit")|safe }}
+            {{ svg_icon(suit, "icon-suit icon-rotated")|safe }}
+            {{ svg_icon(rank, "icon-rank")|safe }}
+            {{ svg_icon(rank, "icon-rank icon-rotated")|safe }}
+        </div>
+        {% endfor %}
+    </div>
+    {% include "svg/card.svg" %}
 </body>
 
 </html>
