--- a/play_rummy/templates/lobbies.html
+++ b/play_rummy/templates/lobbies.html
@@ -9,51 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700" rel="stylesheet">
-    <style>
-        html {
-            font: 16px 'Source Sans Pro', sans-serif;
-        }
-
-        body {
-            font-size: 14px;
-            font-weight: 500;
-            width: 40rem;
-            margin: auto;
-        }
-
-        input,
-        button {
-            font-family: inherit;
-        }
-
-        button {
-            appearance: none;
-            border: none;
-            background-color:aliceblue;
-            border-radius: .125rem;
-            padding: .25rem 1rem;
-            margin: .125rem;
-            cursor: pointer;
-            border: 1px solid #0003;
-        }
-
-        button.button-action {
-            background-color: lightseagreen;
-            color:azure;
-        }
-
-        span.badge {
-            display: inline-flex;
-            background-color: aliceblue;
-            border-radius: .25rem;
-            padding: .125rem .25rem;
-            cursor: default;
-        }
-
-        div.flex {
-            display: flex;
-        }
-    </style>
+    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 </head>
 
 <body>
