--- a/play_rummy/templates/lobby_prepared.html
+++ b/play_rummy/templates/lobby_prepared.html
@@ -32,7 +32,8 @@
                     lobby</button></form>
         </div>
         {% else %}
-        <div class="ms-frem"><span class="badge badge-player{% if session_player.ready %} badge-player-ready{% endif %}">You
+        <div class="ms-frem"><span
+                class="badge badge-player{% if session_player.ready %} badge-player-ready{% endif %}">You
                 <strong class="ms-hrem">#{{ session_player.number }}</strong>{% if session_player.ready %} <strong
                     class="ms-hrem">&check;</strong>{% endif %}</span></div>
         <div class="flex ms-auto">
@@ -47,19 +48,6 @@
         </div>
         {% endif %}
     </div>
-    <div class="deck flex">
-        {% for suit, rank in cards %}
-        {% set suit = "suit-" + suit %}
-        {% set rank = "rank-" + rank %}
-        <div class="card {{ suit }} {{ rank }}">
-            {{ svg_icon(suit, "suit")|safe }}
-            {{ svg_icon(suit, "suit", "rotated")|safe }}
-            {{ svg_icon(rank, "rank")|safe }}
-            {{ svg_icon(rank, "rank", "rotated")|safe }}
-        </div>
-        {% endfor %}
-    </div>
-    {% include "svg/card.svg" %}
 </body>
 
 </html>
