--- a/play_rummy/templates/lobby_started.html
+++ b/play_rummy/templates/lobby_started.html
@@ -80,28 +80,7 @@
     <input type="hidden" id="num_actions" value="{{ lobby.game.num_actions }}">
     <input type="hidden" id="game_state" value="{{ lobby.game.state }}">
     <input type="hidden" id="game_state_query_uri" value="{{ url_for('get_lobby_game_state', lobby_id=lobby_id)}}">
-    <script>
-        let numActionsEl = document.getElementById("num_actions");
-        let numActions = numActionsEl.value | 0;
-
-        let stateEl = document.getElementById("game_state");
-        let state = stateEl.value | 0;
-
-        let gsquEl = document.getElementById("game_state_query_uri");
-        let gsqu = gsquEl.value;
-
-        let timer = setInterval(() => {
-            fetch(gsqu)
-                .then((response) => response.json())
-                .then((data) => compareGameState(data));
-        }, 1000);
-
-        function compareGameState(gameState) {
-            if (gameState.num_actions != numActions || gameState.state != state) {
-                location.reload();
-            }
-        }
-    </script>
+    <script src="{{ url_for('static', filename='js/poll_started.js') }}"></script>
 </body>
 
 </html>
