Fix 6-9 ranks being indistinguishable by restyling cards

--- a/play_rummy/static/css/style.css
+++ b/play_rummy/static/css/style.css
@@ -69,6 +69,11 @@ svg.icon-rotated {
     transform: rotate(180deg);
 }
 
+
+svg.icon-rank.icon-shifted {
+    transform: translate(40%, -50%);
+}
+
 svg.icon-suit.icon-suit-diamonds,
 svg.icon-suit.icon-suit-hearts {
     color: #c83737;
