--- a/play_rummy/templates/macros.html
+++ b/play_rummy/templates/macros.html
@@ -10,7 +10,7 @@
             {{ svg_icon(suit, "suit")|safe }}
             {{ svg_icon(suit, "suit", "rotated")|safe }}
             {{ svg_icon(rank, "rank")|safe }}
-            {{ svg_icon(rank, "rank", "rotated")|safe }}
+            {{ svg_icon(rank, "rank", "shifted")|safe }}
         </div>
     </label>
     {% else %}
