--- a/play_rummy/templates/lobby_started.html
+++ b/play_rummy/templates/lobby_started.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <br>
-    <span class="badge badge-full">Table</span>
+    <span class="badge badge-full">Table<div class="ms-auto"><strong>{{ lobby.game.meld_threshold }}</strong> points to enter</div></span>
     <div class="deck-series flex">
         <div class="deck deck-small flex">
             <div class="card card-label">{{ lobby.game.cards|length }}</div>
