Implement better error messages through Flash flashes

--- a/play_rummy/static/css/style.css
+++ b/play_rummy/static/css/style.css
@@ -221,3 +221,12 @@ div.form-block label {
 div.form-block input {
     flex: 0 0 5rem;
 }
+
+ul.flashes {
+    padding: 0;
+}
+
+ul.flashes li.flash-error {
+    list-style: none;
+    color: #c83737;
+}
