Implement joker swapping and refactor actions to use card IDs

--- a/play_rummy/templates/lobby_started.html
+++ b/play_rummy/templates/lobby_started.html
@@ -76,6 +76,7 @@
         </form>
         <form id="card-action" method="POST" action="{{ url_for('post_lobby_act', lobby_id=lobby_id)}}">
             <button name="action_sort" value="meld">Meld</button>
+            <button name="action_sort" value="swap">Swap</button>
             <button name="action_sort" value="discard">Discard</button>
         </form>
     </div>
